--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-body { background-image: url("./GROUND.jpeg");
+body { background-image: url("https://github.com/Ikramullah-Khateeb/People-Counter-Application/blob/main/GROUND.JPEG");
     background-size: cover;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bolds;
